# pythonProject3

./: README.md  config.py  pyproject.toml  user_settings.json
data/: operations.xls
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
